--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,10 @@
   "description": "CloudImages plugin for CakePHP",
   "type": "cakephp-plugin",
   "require": {
-    "cakephp/cakephp": ">=2.2",
-    "php": ">=5.4.16"
+    "php": ">=5.6"
+  },
+  "suggest": {
+    "cakephp/cakephp": ">=2.2"
   },
   "require-dev": {
     "phpunit/phpunit": "*"
